--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,15 +1,6 @@
-doctype html
-html(lang="fi_FI")
-	head
-		title Taggest
-		link(href="css/mobile.css", type="text/css")
-		link(href="css/desktop.css", type="text/css")
-	body
-		//>>>>> navigation
-		.navigation
-			.search
-			.menu
-				nav
-					a.item(href="./about") about
-					a.item(href="./contact") contact
-		//<<<<< navigation
+extends layout
+
+block head
+
+block content
+	h1 Hello, World!
