--- a/jade/header.jade
+++ b/jade/header.jade
@@ -1,4 +1,4 @@
 head
 		title Taggest
-		link(href="css/mobile.css", type="text/css")
-		link(href="css/desktop.css", type="text/css")
+		link(href="css/mobile.css", rel="stylesheet")
+		link(href="css/desktop.css", rel="stylesheet")
