--- a/jade/navigation.jade
+++ b/jade/navigation.jade
@@ -2,6 +2,10 @@
 	.search
 	.menu
 		nav
-			a.nav-item(href="#taggest") Taggest
-			a.nav-item(href="#adwall") Adwall
-			a.nav-item(href="#contact") Contact
+			.nav-menu &#9776;
+			.nav-item
+				a(href="#taggest") Taggest
+			.nav-item
+				a(href="#adwall") Adwall
+			.nav-item
+				a(href="#contact") Contactomundo!
