--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -8,3 +8,5 @@ html
 			include navigation
 		#content
 			block content
+		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js", type="text/javascript")
+		script(src="js/index.js")
