--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -12,9 +12,203 @@
 @import "theme";
 
 html, body {
+	position: relative;
+	width: 100%; height: 100%;
 	margin: 0; padding: 0;
 	font-family: $font-family;
+	font-size: 16px;
+	background: $c-fn-1;
+	overflow-x: hidden;
 }
 .navigation {
-	display: relative;
+	margin: 0; padding: 0;
+	display: inline-block;
+	position: fixed;
+	height: 100%;
+	max-width: 3rem;
+	overflow: hidden;
+	transition: all $transTime ease-out;
+	background-color: $c-fn-4;
+	z-index: 9001;
+	.menu {
+		display: block;
+		position: relative;
+		margin: 0;
+		top: 0;
+		left: 0;
+		right: calc(100% - 3rem);
+		bottom: 0;
+		height: 100%;
+		box-shadow:
+			inset -0.75em 0 1em -0.5em $c-fn-dk-4,
+			0.25em 0 0.5em 0 rgba($c-fn-lt-4,0.5);
+		transition: all $transTime ease-out;
+		overflow: hidden;
+		.nav-menu {
+			cursor: pointer;
+			position: relative;
+			display: block;
+			overflow: hidden;
+			max-height: 3em;
+			line-height: 1.5em;
+			font-size: 2rem;
+			background-color: rgba($c-fn-dk-4,0.5);
+			color: $c-fn-lt-4;
+			text-align: right;
+			padding-right: 0.3em;
+			transition: all $transTime ease-out;
+			&:hover {
+				background: $c-fn-dk-4;
+			}
+		}
+		.nav-item {
+			cursor: pointer;
+			display: block;
+			margin: 0;
+			position: relative;
+			overflow: hidden;
+			width: 100%;
+			transition:
+				all $transTime ease-out;
+			box-sizing: border-box;
+			font-size: 1.25em;
+			line-height: 2em;
+			padding: 0 0.5rem 0 3rem;
+			a {
+				display: block;
+				text-decoration: none;
+				color: $c-fn-dk-4;
+				&:focus {
+					outline: none;
+				}
+			}
+			&:hover {
+				background: rgba($c-fn-dk-4, 0.5);
+				a {
+					color: $c-txt-lt;
+				}
+			}
+			&:nth-child(3n+2) {
+				border-right: 0.5rem solid $c-fn-1;
+			}
+			&:nth-child(3n+3) {
+				border-right: 0.5rem solid $c-fn-2;
+			}
+			&:nth-child(3n+4) {
+				border-right: 0.5rem solid $c-fn-3;
+			}
+		}
+	}
+	&.open {
+		top: 0; left: 0;
+		min-width: 15rem;
+		max-width: 100%;
+		.menu {
+			.nav-item {
+				margin-left: 0;
+				padding-left: 1.5rem;
+			}
+		}
+	}
+	.nav-item.current {
+		&:nth-child(3n+2) {
+			background: $c-fn-1;
+		}
+		&:nth-child(3n+3) {
+			background: $c-fn-2;
+		}
+		&:nth-child(3n+4) {
+			background: $c-fn-3;
+		}
+	}
+}
+@keyframes gloss {
+	0% { background-position: 0% 50%; }
+	100% { background-position: 100% 50%; }
+}
+
+h1, h2, h3, h4 {
+	display: block;
+	margin: 0;
+	padding: 0;
+	font-weight: 500;
+	text-decoration: none;
+	color: $c-txt-1;
+}
+#content {
+	display: block;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	width: calc(100% - 3rem);
+	height: 100%;
+	box-sizing: border-box;
+	box-shadow: inset 0 -0.25em 0 $c-fn-dk-3;
+	transition: all $transTime ease-out;
+	left: 15rem;
+	&.open {
+		left: 3rem;
+		.page:before {
+			display: none;
+		}
+	}
+	.page {
+		display: block;
+		overflow: hidden;
+		position: relative;
+		width: 100%;
+		min-height: 100%;
+		padding: 0 1rem 0 0.5rem;
+		box-sizing: border-box;
+		&:nth-child(3n+1) {
+			background: $c-fn-1;
+			&:before {
+				background: rgba($c-fn-1,0.85);
+			}
+		}
+		&:nth-child(3n+2) {
+			background: $c-fn-2;
+			&:before {
+				background: rgba($c-fn-2,0.85);
+			}
+		}
+		&:nth-child(3n+3) {
+			background: $c-fn-3;
+			&:before {
+				background: rgba($c-fn-3,0.85);
+			}
+		}
+	}
+	.page:before { // "blur" when navi is open
+		left: 0;
+		display: block;
+		content: " ";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
+	&.open .page {
+		padding: 0;
+		margin-left: 0;
+	}
+	h1 {
+		color: $c-txt-dk;
+		text-shadow: 0 1px rgba($c-txt-lt,0.6);
+		font-size: 1.5rem;
+		padding: 0.4em 0.5rem 0.4em 0.5rem;
+		line-height: 1.2em;
+	}
+	.block {
+		display: block;
+		font-size: 0.85rem;
+		margin: 0 0 0 1rem;
+		p {
+			line-height: 1.5rem;
+			margin: 0 0 1rem 0;
+			padding: 0.25rem 0.5rem;
+			display: inline-block;
+			background: $c-fn-lt-1;
+			box-shadow: 0 0.4rem 0 0 rgba($c-fn-1,0.67);
+		}
+	}
 }
