--- a/jade/header.jade
+++ b/jade/header.jade
@@ -1,4 +1,5 @@
 head
 		title Taggest
-		link(href="css/mobile.css", rel="stylesheet")
+		//link(href="css/common.css", rel="stylesheet")
+		//link(href="css/mobile.css", rel="stylesheet")
 		link(href="css/desktop.css", rel="stylesheet")
