--- a/jade/index.jade
+++ b/jade/index.jade
@@ -4,19 +4,28 @@ block head
 
 block content
 	.page#taggest
-		h1 Hello, World!
+		h1 Taggest on helpoin tapa mainostaa kaupunkiympäristössä
 		.block
-			p We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360. We might have things here, lots of things. Words, phrases, stuff like that.
-			p Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360. We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360.
-			p We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360. We might have things here, lots of things. Words, phrases, stuff like that.
-			p Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360.We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360.
+			ul.threeBox
+				li.threeBoxItem
+					img(src="http://placehold.it/150x150/AFDCCC")
+					p Selaa kartalta mainosnäyttöjä tilan tyypin mukaan.
+				li.threeBoxItem
+					img(src="http://placehold.it/150x150/AFDCCC")
+					p Lähetä mainosaineisto
+				li.threeBoxItem
+					img(src="http://placehold.it/150x150/AFDCCC")
+					p Maksa haluamasi mainosaika
+			p Mainoksesi ilmestyy näyttöihin halutessasi jopa heti!
 	.page#adwall
-		h1 Adwall
+		h1 Ota liiketilassasi käyttöön Taggest -mainosnäyttö.
 		.block
-			p Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360. We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360.
-			p We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360. We might have things here, lots of things. Words, phrases, stuff like that.
+			p Hyväksy kampanjoita helposti älypuhelimellasi tai webistä - alat tienaamaan mainosrahaa heti.
+			p Voit myös laittaa yrityksesi kotisivuille linkin, josta pääsee suoraan lähettämään mainoksia sinun tai yrityksesi näyttöihin.
+			p Voit tilata näyttölaitteen meiltä tai käyttää omaa laitteistoasi - Taggest toimii lähes millä tahansa laitteella, jossa on näyttö ja Internet-yhteys.
 	.page#contact
-		h1 Contact
+		h1 Tilaa mainosnäyttö heti!
 		.block
-			p Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360. We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360.
-			p We might have things here, lots of things. Words, phrases, stuff like that. Skate ipsum kickflip mctwist indie ollie noseblunt, pop-shovit 360. We might have things here, lots of things. Words, phrases, stuff like that.
+			p Näyttöjen hinnat alkaen 300€ - sis. toimituksen, asennuksen ja vahvistamisen varmasti toimivaksi näytöksi palvelussamme.
+			p Saat 70% näyttösi mainostuloista - eikä sinun tarvitse tehdä muuta kuin pitää mainosnäyttö käynnissä ja odottaa.
+			p Avaamme karttapalvelun tämän vuoden (2014) Elo-Syyskuussa. Tilaa siihen mennessä tiloihisi näyttö ja laita linkki kotisivuillesi, jotta yritykset pääsevät myös sivujesi kautta mainostamaan tiloissasi. Voit myös pyörittää näytöissäsi omia mainoksiasi ilmaiseksi. Jo ennen karttapalvelumme avaamista toimitamme näyttöihisi mainoksia yhteistyökumppaneiltamme.
