--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,5 +1,80 @@
 /* colors */
-/* line 14, ../../scss/mobile.scss */
+@import url("http://fonts.googleapis.com/css?family=Londrina+Solid");
+/* line 3, ../../scss/_logo.scss */
+.logo {
+  cursor: pointer;
+  position: relative;
+  background: #000;
+  display: inline-flex;
+  line-height: 1em;
+  font-weight: 400;
+  width: 2em;
+  height: 2em;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 0.25em 0.125em;
+}
+/* line 17, ../../scss/_logo.scss */
+.logo .row {
+  margin-top: -0.125em;
+  flex: 1;
+  display: flex;
+  width: 100%;
+  height: 1px;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  transform: scaleY(1.1);
+}
+/* line 30, ../../scss/_logo.scss */
+.logo:hover .ltr.t {
+  color: #60b99a;
+}
+/* line 31, ../../scss/_logo.scss */
+.logo:hover .ltr.a {
+  color: #60b99a;
+}
+/* line 32, ../../scss/_logo.scss */
+.logo:hover .ltr.g {
+  color: #60b99a;
+}
+/* line 33, ../../scss/_logo.scss */
+.logo:hover .ltr.d {
+  color: black;
+}
+/* line 34, ../../scss/_logo.scss */
+.logo:hover .ltr.e {
+  color: #60b99a;
+}
+/* line 35, ../../scss/_logo.scss */
+.logo:hover .ltr.s {
+  color: #60b99a;
+}
+/* line 38, ../../scss/_logo.scss */
+.logo .ltr {
+  font-family: "Londrina Solid", sans-serif;
+  display: inline-block;
+  flex: 1;
+  color: #FFF;
+  box-sizing: border-box;
+}
+/* line 44, ../../scss/_logo.scss */
+.logo .ltr.a {
+  margin-left: -0.125em;
+}
+/* line 47, ../../scss/_logo.scss */
+.logo .ltr.g {
+  margin-top: -0.1em;
+  transform: scaleY(0.75);
+}
+/* line 51, ../../scss/_logo.scss */
+.logo .ltr.d {
+  font-size: 0.85em;
+}
+
+/* line 15, ../../scss/mobile.scss */
 html, body {
   position: relative;
   width: 100%;
@@ -9,7 +84,6 @@ html, body {
   font-family: sans-serif;
   font-size: 16px;
   background: #f8f7e6;
-  overflow-x: hidden;
 }
 
 /* line 23, ../../scss/mobile.scss */
@@ -18,6 +92,7 @@ html, body {
   padding: 0;
   display: inline-block;
   position: fixed;
+  top: 0;
   height: 100%;
   max-width: 3rem;
   overflow: hidden;
@@ -25,7 +100,18 @@ html, body {
   background-color: #adab7c;
   z-index: 9001;
 }
-/* line 33, ../../scss/mobile.scss */
+/* line 34, ../../scss/mobile.scss */
+.navigation .logo {
+  position: absolute;
+  font-size: 1.5rem;
+  z-index: 10000;
+  bottom: 0;
+  left: 0;
+  width: 3rem;
+  transition: all 0.15s;
+  transform: translateX(0);
+}
+/* line 44, ../../scss/mobile.scss */
 .navigation .menu {
   display: block;
   position: relative;
@@ -39,7 +125,7 @@ html, body {
   transition: all 0.15s ease-out;
   overflow: hidden;
 }
-/* line 47, ../../scss/mobile.scss */
+/* line 58, ../../scss/mobile.scss */
 .navigation .menu .nav-menu {
   cursor: pointer;
   position: relative;
@@ -54,11 +140,11 @@ html, body {
   padding-right: 0.3em;
   transition: all 0.15s ease-out;
 }
-/* line 60, ../../scss/mobile.scss */
+/* line 71, ../../scss/mobile.scss */
 .navigation .menu .nav-menu:hover {
   background: #333220;
 }
-/* line 64, ../../scss/mobile.scss */
+/* line 75, ../../scss/mobile.scss */
 .navigation .menu .nav-item {
   cursor: pointer;
   display: block;
@@ -72,74 +158,78 @@ html, body {
   line-height: 2em;
   padding: 0 0.5rem 0 3rem;
 }
-/* line 77, ../../scss/mobile.scss */
+/* line 88, ../../scss/mobile.scss */
+.navigation .menu .nav-item:nth-child(3n+3) {
+  border-right: 0.5rem solid #f8f7e6;
+}
+/* line 89, ../../scss/mobile.scss */
+.navigation .menu .nav-item:nth-child(3n+4) {
+  border-right: 0.5rem solid #60b99a;
+}
+/* line 90, ../../scss/mobile.scss */
+.navigation .menu .nav-item:nth-child(3n+5) {
+  border-right: 0.5rem solid #f77825;
+}
+/* line 91, ../../scss/mobile.scss */
 .navigation .menu .nav-item a {
   display: block;
   text-decoration: none;
   color: #333220;
 }
-/* line 81, ../../scss/mobile.scss */
+/* line 95, ../../scss/mobile.scss */
 .navigation .menu .nav-item a:focus {
   outline: none;
 }
-/* line 85, ../../scss/mobile.scss */
+/* line 99, ../../scss/mobile.scss */
 .navigation .menu .nav-item:hover {
   background: rgba(51, 50, 32, 0.5);
 }
-/* line 87, ../../scss/mobile.scss */
+/* line 101, ../../scss/mobile.scss */
 .navigation .menu .nav-item:hover a {
   color: #fafafa;
 }
-/* line 91, ../../scss/mobile.scss */
-.navigation .menu .nav-item:nth-child(3n+2) {
-  border-right: 0.5rem solid #f8f7e6;
-}
-/* line 94, ../../scss/mobile.scss */
-.navigation .menu .nav-item:nth-child(3n+3) {
-  border-right: 0.5rem solid #60b99a;
-}
-/* line 97, ../../scss/mobile.scss */
-.navigation .menu .nav-item:nth-child(3n+4) {
-  border-right: 0.5rem solid #f77825;
-}
-/* line 102, ../../scss/mobile.scss */
+/* line 107, ../../scss/mobile.scss */
 .navigation.open {
   top: 0;
   left: 0;
   min-width: 15rem;
   max-width: 100%;
 }
-/* line 107, ../../scss/mobile.scss */
+/* line 111, ../../scss/mobile.scss */
+.navigation.open .logo {
+  font-size: 4.20rem;
+  width: 8rem;
+  left: 50%;
+  transform: translateX(-50%);
+  background: transparent;
+}
+/* line 117, ../../scss/mobile.scss */
+.navigation.open .logo:hover {
+  background: #fafafa;
+}
+/* line 119, ../../scss/mobile.scss */
+.navigation.open .logo:hover .row .ltr {
+  color: #080808 !important;
+}
+/* line 125, ../../scss/mobile.scss */
 .navigation.open .menu .nav-item {
   margin-left: 0;
   padding-left: 1.5rem;
 }
-/* line 114, ../../scss/mobile.scss */
-.navigation .nav-item.current:nth-child(3n+2) {
+/* line 132, ../../scss/mobile.scss */
+.navigation .nav-item.current:nth-child(3n+3) {
   background: #f8f7e6;
 }
-/* line 117, ../../scss/mobile.scss */
-.navigation .nav-item.current:nth-child(3n+3) {
+/* line 133, ../../scss/mobile.scss */
+.navigation .nav-item.current:nth-child(3n+4) {
   background: #60b99a;
 }
-/* line 120, ../../scss/mobile.scss */
-.navigation .nav-item.current:nth-child(3n+4) {
+/* line 134, ../../scss/mobile.scss */
+.navigation .nav-item.current:nth-child(3n+5) {
   background: #f77825;
 }
 
-@keyframes gloss {
-  /* line 126, ../../scss/mobile.scss */
-  0% {
-    background-position: 0% 50%;
-  }
-
-  /* line 127, ../../scss/mobile.scss */
-  100% {
-    background-position: 100% 50%;
-  }
-}
-
-/* line 130, ../../scss/mobile.scss */
+/* line 137, ../../scss/mobile.scss */
 h1, h2, h3, h4 {
   display: block;
   margin: 0;
@@ -149,7 +239,7 @@ h1, h2, h3, h4 {
   color: #080808;
 }
 
-/* line 138, ../../scss/mobile.scss */
+/* line 145, ../../scss/mobile.scss */
 #content {
   display: block;
   margin: 0;
@@ -162,15 +252,15 @@ h1, h2, h3, h4 {
   transition: all 0.15s ease-out;
   left: 15rem;
 }
-/* line 149, ../../scss/mobile.scss */
+/* line 156, ../../scss/mobile.scss */
 #content.open {
   left: 3rem;
 }
-/* line 151, ../../scss/mobile.scss */
+/* line 158, ../../scss/mobile.scss */
 #content.open .page:before {
   display: none;
 }
-/* line 155, ../../scss/mobile.scss */
+/* line 162, ../../scss/mobile.scss */
 #content .page {
   display: block;
   overflow: hidden;
@@ -180,23 +270,23 @@ h1, h2, h3, h4 {
   padding: 0 1rem 0 0.5rem;
   box-sizing: border-box;
 }
-/* line 163, ../../scss/mobile.scss */
+/* line 170, ../../scss/mobile.scss */
 #content .page:nth-child(3n+1) {
   background: #f8f7e6;
 }
-/* line 165, ../../scss/mobile.scss */
+/* line 171, ../../scss/mobile.scss */
 #content .page:nth-child(3n+1):before {
   background: rgba(248, 247, 230, 0.85);
 }
-/* line 169, ../../scss/mobile.scss */
+/* line 173, ../../scss/mobile.scss */
 #content .page:nth-child(3n+2) {
   background: #60b99a;
 }
-/* line 171, ../../scss/mobile.scss */
+/* line 174, ../../scss/mobile.scss */
 #content .page:nth-child(3n+2):before {
   background: rgba(96, 185, 154, 0.85);
 }
-/* line 175, ../../scss/mobile.scss */
+/* line 176, ../../scss/mobile.scss */
 #content .page:nth-child(3n+3) {
   background: #f77825;
 }
@@ -204,7 +294,7 @@ h1, h2, h3, h4 {
 #content .page:nth-child(3n+3):before {
   background: rgba(247, 120, 37, 0.85);
 }
-/* line 182, ../../scss/mobile.scss */
+/* line 180, ../../scss/mobile.scss */
 #content .page:before {
   left: 0;
   display: block;
@@ -213,31 +303,62 @@ h1, h2, h3, h4 {
   width: 100%;
   height: 100%;
 }
-/* line 190, ../../scss/mobile.scss */
+/* line 188, ../../scss/mobile.scss */
 #content.open .page {
   padding: 0;
   margin-left: 0;
 }
-/* line 194, ../../scss/mobile.scss */
+/* line 192, ../../scss/mobile.scss */
 #content h1 {
-  color: #080808;
-  text-shadow: 0 1px rgba(250, 250, 250, 0.6);
+  display: inline-block;
+  background: #080808;
+  color: #fafafa;
+  text-shadow: 0 1px rgba(8, 8, 8, 0.6);
   font-size: 1.5rem;
-  padding: 0.4em 0.5rem 0.4em 0.5rem;
-  line-height: 1.2em;
+  font-family: "Londrina Solid", sans-serif;
+  padding: 0.27em 0.5rem 0.27em 0.5rem;
+  margin: 0 0 1rem 0;
+  line-height: 1.44em;
+  box-shadow: 0 0.4rem 0 0 rgba(250, 250, 250, 0.67);
 }
-/* line 201, ../../scss/mobile.scss */
+/* line 204, ../../scss/mobile.scss */
 #content .block {
   display: block;
   font-size: 0.85rem;
   margin: 0 0 0 1rem;
 }
-/* line 205, ../../scss/mobile.scss */
-#content .block p {
+/* line 208, ../../scss/mobile.scss */
+#content .block > p {
   line-height: 1.5rem;
   margin: 0 0 1rem 0;
   padding: 0.25rem 0.5rem;
   display: inline-block;
   background: white;
   box-shadow: 0 0.4rem 0 0 rgba(248, 247, 230, 0.67);
+}
+/* line 216, ../../scss/mobile.scss */
+#content .block .threeBox {
+  position: relative;
+  display: block;
+  width: calc(100% - 2rem);
+  list-style: none;
+  padding: 0;
+}
+/* line 222, ../../scss/mobile.scss */
+#content .block .threeBox .threeBoxItem {
+  flex: 1;
+  text-align: left;
+  box-sizing: border-box;
+  margin: 0.25rem 0;
+  padding: 0 0;
+  box-sizing: border-box;
+}
+/* line 229, ../../scss/mobile.scss */
+#content .block .threeBox .threeBoxItem img {
+  width: 150px;
+}
+/* line 232, ../../scss/mobile.scss */
+#content .block .threeBox .threeBoxItem p {
+  line-height: 1.5rem;
+  margin: 0.5rem 0;
 }
