--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -10,6 +10,7 @@
 @import "functions";
 @import "mixins";
 @import "theme";
+@import "logo";
 
 html, body {
 	position: relative;
@@ -18,18 +19,28 @@ html, body {
 	font-family: $font-family;
 	font-size: 16px;
 	background: $c-fn-1;
-	overflow-x: hidden;
 }
 .navigation {
 	margin: 0; padding: 0;
 	display: inline-block;
 	position: fixed;
+	top: 0;
 	height: 100%;
 	max-width: 3rem;
 	overflow: hidden;
 	transition: all $transTime ease-out;
 	background-color: $c-fn-4;
 	z-index: 9001;
+	.logo {
+		position: absolute;
+		font-size: 1.5rem;
+		z-index: 10000;
+		bottom: 0;
+		left: 0;
+		width: 3rem;
+		transition: all $transTime;
+		transform: translateX(0);
+	}
 	.menu {
 		display: block;
 		position: relative;
@@ -74,6 +85,9 @@ html, body {
 			font-size: 1.25em;
 			line-height: 2em;
 			padding: 0 0.5rem 0 3rem;
+			&:nth-child(3n+3) { border-right: 0.5rem solid $c-fn-1; }
+			&:nth-child(3n+4) { border-right: 0.5rem solid $c-fn-2; }
+			&:nth-child(3n+5) { border-right: 0.5rem solid $c-fn-3; }
 			a {
 				display: block;
 				text-decoration: none;
@@ -88,21 +102,25 @@ html, body {
 					color: $c-txt-lt;
 				}
 			}
-			&:nth-child(3n+2) {
-				border-right: 0.5rem solid $c-fn-1;
-			}
-			&:nth-child(3n+3) {
-				border-right: 0.5rem solid $c-fn-2;
-			}
-			&:nth-child(3n+4) {
-				border-right: 0.5rem solid $c-fn-3;
-			}
 		}
 	}
 	&.open {
 		top: 0; left: 0;
 		min-width: 15rem;
 		max-width: 100%;
+		.logo {
+			font-size: 4.20rem;
+			width: 8rem;
+			left: 50%;
+			transform: translateX(-50%);
+			background: transparent;
+			&:hover {
+				background: $c-txt-lt;
+				.row .ltr {
+					color: $c-txt-dk !important;
+				}
+			}
+		}
 		.menu {
 			.nav-item {
 				margin-left: 0;
@@ -111,22 +129,11 @@ html, body {
 		}
 	}
 	.nav-item.current {
-		&:nth-child(3n+2) {
-			background: $c-fn-1;
-		}
-		&:nth-child(3n+3) {
-			background: $c-fn-2;
-		}
-		&:nth-child(3n+4) {
-			background: $c-fn-3;
-		}
+		&:nth-child(3n+3) { background: $c-fn-1; }
+		&:nth-child(3n+4) { background: $c-fn-2; }
+		&:nth-child(3n+5) { background: $c-fn-3; }
 	}
 }
-@keyframes gloss {
-	0% { background-position: 0% 50%; }
-	100% { background-position: 100% 50%; }
-}
-
 h1, h2, h3, h4 {
 	display: block;
 	margin: 0;
@@ -160,23 +167,14 @@ h1, h2, h3, h4 {
 		min-height: 100%;
 		padding: 0 1rem 0 0.5rem;
 		box-sizing: border-box;
-		&:nth-child(3n+1) {
-			background: $c-fn-1;
-			&:before {
-				background: rgba($c-fn-1,0.85);
-			}
+		&:nth-child(3n+1) { background: $c-fn-1;
+			&:before { background: rgba($c-fn-1,0.85); }
 		}
-		&:nth-child(3n+2) {
-			background: $c-fn-2;
-			&:before {
-				background: rgba($c-fn-2,0.85);
-			}
+		&:nth-child(3n+2) { background: $c-fn-2;
+			&:before { background: rgba($c-fn-2,0.85); }
 		}
-		&:nth-child(3n+3) {
-			background: $c-fn-3;
-			&:before {
-				background: rgba($c-fn-3,0.85);
-			}
+		&:nth-child(3n+3) { background: $c-fn-3;
+			&:before { background: rgba($c-fn-3,0.85); }
 		}
 	}
 	.page:before { // "blur" when navi is open
@@ -192,23 +190,50 @@ h1, h2, h3, h4 {
 		margin-left: 0;
 	}
 	h1 {
-		color: $c-txt-dk;
-		text-shadow: 0 1px rgba($c-txt-lt,0.6);
+		display: inline-block;
+		background: $c-txt-dk;
+		color: $c-txt-lt;
+		text-shadow: 0 1px rgba($c-txt-dk,0.6);
 		font-size: 1.5rem;
-		padding: 0.4em 0.5rem 0.4em 0.5rem;
-		line-height: 1.2em;
+		font-family: "Londrina Solid", $font-family;
+		padding: 0.27em 0.5rem 0.27em 0.5rem;
+		margin: 0 0 1rem 0;
+		line-height: 1.44em;
+		box-shadow: 0 0.4rem 0 0 rgba($c-txt-lt,0.67);
 	}
 	.block {
 		display: block;
 		font-size: 0.85rem;
 		margin: 0 0 0 1rem;
-		p {
+		& > p {
 			line-height: 1.5rem;
 			margin: 0 0 1rem 0;
 			padding: 0.25rem 0.5rem;
 			display: inline-block;
 			background: $c-fn-lt-1;
 			box-shadow: 0 0.4rem 0 0 rgba($c-fn-1,0.67);
+		}
+		.threeBox {
+			position: relative;
+			display: block;
+			width: calc(100% - 2rem);
+			list-style: none;
+			padding: 0;
+			.threeBoxItem {
+				flex: 1;
+				text-align: left;
+				box-sizing: border-box;
+				margin: 0.25rem 0;
+				padding: 0 0;
+				box-sizing: border-box;
+				img {
+					width: 150px;
+				}
+				p {
+					line-height: 1.5rem;
+					margin: 0.5rem 0;
+				}
+			}
 		}
 	}
 }
