--- a/jade/header.jade
+++ b/jade/header.jade
@@ -1,5 +1,6 @@
 head
-		title Taggest
-		//link(href="css/common.css", rel="stylesheet")
-		//link(href="css/mobile.css", rel="stylesheet")
-		link(href="css/desktop.css", rel="stylesheet")
+	meta(charset="utf-8")
+	title Taggest
+	//link(href="css/common.css", rel="stylesheet")
+	//link(href="css/mobile.css", rel="stylesheet")
+	link(href="css/desktop.css", rel="stylesheet")
