scroll indicator fixed, mobile css improvements

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block head
+	title Taggest
+	link(href="css/mobile.css", rel="stylesheet")
+	//-link(href="css/desktop.css", rel="stylesheet")
 
 block content
 	.page#taggest
