--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -20,6 +20,10 @@ html, body {
 	font-size: 16px;
 	background: $c-fn-1;
 }
+body {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
 .navigation {
 	margin: 0; padding: 0;
 	display: inline-block;
@@ -38,7 +42,7 @@ html, body {
 		bottom: 0;
 		left: 0;
 		width: 3rem;
-		transition: all $transTime;
+		transition: all $transTime ease-out;
 		transform: translateX(0);
 	}
 	.menu {
@@ -67,7 +71,9 @@ html, body {
 			color: $c-fn-lt-4;
 			text-align: right;
 			padding-right: 0.3em;
+			/*
 			transition: all $transTime ease-out;
+			*/
 			&:hover {
 				background: $c-fn-dk-4;
 			}
@@ -79,8 +85,10 @@ html, body {
 			position: relative;
 			overflow: hidden;
 			width: 100%;
+			/*
 			transition:
 				all $transTime ease-out;
+			*/
 			box-sizing: border-box;
 			font-size: 1.25em;
 			line-height: 2em;
@@ -147,13 +155,15 @@ h1, h2, h3, h4 {
 	margin: 0;
 	padding: 0;
 	position: relative;
-	width: calc(100% - 3rem);
+	width: 100%;
+	white-space: normal;
 	height: 100%;
 	box-sizing: border-box;
 	box-shadow: inset 0 -0.25em 0 $c-fn-dk-3;
-	transition: all $transTime ease-out;
+	transition: left $transTime ease-out;
 	left: 15rem;
 	&.open {
+		width: calc(100% - 3rem);
 		left: 3rem;
 		.page:before {
 			display: none;
@@ -167,14 +177,15 @@ h1, h2, h3, h4 {
 		min-height: 100%;
 		padding: 0 1rem 0 0.5rem;
 		box-sizing: border-box;
+		&:before { z-index: 9001; }
 		&:nth-child(3n+1) { background: $c-fn-1;
-			&:before { background: rgba($c-fn-1,0.85); }
+			&:before {   background: rgba($c-fn-1, 0.85); }
 		}
 		&:nth-child(3n+2) { background: $c-fn-2;
-			&:before { background: rgba($c-fn-2,0.85); }
+			&:before {   background: rgba($c-fn-2, 0.85); }
 		}
 		&:nth-child(3n+3) { background: $c-fn-3;
-			&:before { background: rgba($c-fn-3,0.85); }
+			&:before {   background: rgba($c-fn-3, 0.85); }
 		}
 	}
 	.page:before { // "blur" when navi is open
