--- a/jade/index.jade
+++ b/jade/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block head
 	title Taggest
-	link(href="css/mobile.css", rel="stylesheet")
+	link(href="css/common.css", rel="stylesheet")
 	//-link(href="css/desktop.css", rel="stylesheet")
 
 block content
