--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,1 +1,594 @@
-/* colors */
+@media (max-width: 767px) {
+  /* colors */
+  @import url("http://fonts.googleapis.com/css?family=Londrina+Solid");
+  /* line 3, ../../scss/_logo.scss */
+  .logo {
+    cursor: pointer;
+    position: relative;
+    background: #000;
+    display: inline-flex;
+    line-height: 1em;
+    font-weight: 400;
+    width: 2em;
+    height: 2em;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0.25em 0.125em;
+  }
+  /* line 17, ../../scss/_logo.scss */
+  .logo .row {
+    margin-top: -0.125em;
+    flex: 1;
+    display: flex;
+    width: 100%;
+    height: 1px;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    transform: scaleY(1.1);
+  }
+  /* line 30, ../../scss/_logo.scss */
+  .logo:hover .ltr.t {
+    color: #60b99a;
+  }
+  /* line 31, ../../scss/_logo.scss */
+  .logo:hover .ltr.a {
+    color: #60b99a;
+  }
+  /* line 32, ../../scss/_logo.scss */
+  .logo:hover .ltr.g {
+    color: #60b99a;
+  }
+  /* line 33, ../../scss/_logo.scss */
+  .logo:hover .ltr.d {
+    color: black;
+  }
+  /* line 34, ../../scss/_logo.scss */
+  .logo:hover .ltr.e {
+    color: #60b99a;
+  }
+  /* line 35, ../../scss/_logo.scss */
+  .logo:hover .ltr.s {
+    color: #60b99a;
+  }
+  /* line 38, ../../scss/_logo.scss */
+  .logo .ltr {
+    font-family: "Londrina Solid", "Droid Sans", sans-serif;
+    display: inline-block;
+    flex: 1;
+    color: #FFF;
+    box-sizing: border-box;
+  }
+  /* line 44, ../../scss/_logo.scss */
+  .logo .ltr.a {
+    margin-left: -0.125em;
+  }
+  /* line 47, ../../scss/_logo.scss */
+  .logo .ltr.g {
+    margin-top: -0.1em;
+    transform: scaleY(0.75);
+  }
+  /* line 51, ../../scss/_logo.scss */
+  .logo .ltr.d {
+    font-size: 0.85em;
+  }
+
+  /* line 15, ../../scss/mobile.scss */
+  html, body {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Droid Sans", sans-serif;
+    font-size: 16px;
+    background: #f8f7e6;
+  }
+
+  /* line 23, ../../scss/mobile.scss */
+  body {
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
+  /* line 27, ../../scss/mobile.scss */
+  .navigation {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    position: fixed;
+    top: 0;
+    height: 100%;
+    max-width: 3rem;
+    overflow: hidden;
+    transition: all 0.15s ease-out;
+    background-color: #adab7c;
+    z-index: 9001;
+  }
+  /* line 38, ../../scss/mobile.scss */
+  .navigation .logo {
+    position: absolute;
+    font-size: 1.5rem;
+    z-index: 10000;
+    bottom: 0;
+    left: 0;
+    width: 3rem;
+    transition: all 0.15s ease-out;
+    transform: translateX(0);
+  }
+  /* line 48, ../../scss/mobile.scss */
+  .navigation .menu {
+    display: block;
+    position: relative;
+    margin: 0;
+    top: 0;
+    left: 0;
+    right: calc(100% - 3rem);
+    bottom: 0;
+    height: 100%;
+    box-shadow: inset -0.75em 0 1em -0.5em #333220, 0.25em 0 0.5em 0 rgba(204, 203, 174, 0.5);
+    transition: all 0.15s ease-out;
+    overflow: hidden;
+  }
+  /* line 62, ../../scss/mobile.scss */
+  .navigation .menu .nav-menu {
+    cursor: pointer;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    max-height: 3em;
+    line-height: 1.5em;
+    font-size: 2rem;
+    background-color: rgba(51, 50, 32, 0.5);
+    color: #cccbae;
+    text-align: right;
+    padding-right: 0.3em;
+    /*
+    transition: all $transTime ease-out;
+    */
+  }
+  /* line 77, ../../scss/mobile.scss */
+  .navigation .menu .nav-menu:hover {
+    background: #333220;
+  }
+  /* line 81, ../../scss/mobile.scss */
+  .navigation .menu .nav-item {
+    cursor: pointer;
+    display: block;
+    margin: 0;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    /*
+    transition:
+    	all $transTime ease-out;
+    */
+    box-sizing: border-box;
+    font-size: 1.25em;
+    line-height: 2em;
+    padding: 0 0.5rem 0 3rem;
+  }
+  /* line 96, ../../scss/mobile.scss */
+  .navigation .menu .nav-item:nth-child(3n+3) {
+    border-right: 0.5rem solid #f8f7e6;
+  }
+  /* line 97, ../../scss/mobile.scss */
+  .navigation .menu .nav-item:nth-child(3n+4) {
+    border-right: 0.5rem solid #60b99a;
+  }
+  /* line 98, ../../scss/mobile.scss */
+  .navigation .menu .nav-item:nth-child(3n+5) {
+    border-right: 0.5rem solid #f77825;
+  }
+  /* line 99, ../../scss/mobile.scss */
+  .navigation .menu .nav-item a {
+    display: block;
+    text-decoration: none;
+    color: #333220;
+  }
+  /* line 103, ../../scss/mobile.scss */
+  .navigation .menu .nav-item a:focus {
+    outline: none;
+  }
+  /* line 107, ../../scss/mobile.scss */
+  .navigation .menu .nav-item:hover {
+    background: rgba(51, 50, 32, 0.5);
+  }
+  /* line 109, ../../scss/mobile.scss */
+  .navigation .menu .nav-item:hover a {
+    color: #fafafa;
+  }
+  /* line 115, ../../scss/mobile.scss */
+  .navigation.open {
+    top: 0;
+    left: 0;
+    min-width: 15rem;
+    max-width: 100%;
+  }
+  /* line 119, ../../scss/mobile.scss */
+  .navigation.open .logo {
+    font-size: 4.20rem;
+    width: 8rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background: transparent;
+  }
+  /* line 125, ../../scss/mobile.scss */
+  .navigation.open .logo:hover {
+    background: #fafafa;
+  }
+  /* line 127, ../../scss/mobile.scss */
+  .navigation.open .logo:hover .row .ltr {
+    color: #080808 !important;
+  }
+  /* line 133, ../../scss/mobile.scss */
+  .navigation.open .menu .nav-item {
+    margin-left: 0;
+    padding-left: 1.5rem;
+  }
+  /* line 140, ../../scss/mobile.scss */
+  .navigation .nav-item.current:nth-child(3n+3) {
+    background: #f8f7e6;
+  }
+  /* line 141, ../../scss/mobile.scss */
+  .navigation .nav-item.current:nth-child(3n+4) {
+    background: #60b99a;
+  }
+  /* line 142, ../../scss/mobile.scss */
+  .navigation .nav-item.current:nth-child(3n+5) {
+    background: #f77825;
+  }
+
+  /* line 145, ../../scss/mobile.scss */
+  h1, h2, h3, h4 {
+    display: block;
+    margin: 0;
+    padding: 0;
+    font-weight: 500;
+    text-decoration: none;
+    color: #080808;
+  }
+
+  /* line 153, ../../scss/mobile.scss */
+  #content {
+    display: block;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
+    white-space: normal;
+    height: 100%;
+    box-sizing: border-box;
+    box-shadow: inset 0 -0.25em 0 #431c02;
+    transition: left 0.15s ease-out;
+    left: 15rem;
+  }
+  /* line 165, ../../scss/mobile.scss */
+  #content.open {
+    width: calc(100% - 3rem);
+    left: 3rem;
+  }
+  /* line 168, ../../scss/mobile.scss */
+  #content.open .page:before {
+    display: none;
+  }
+  /* line 172, ../../scss/mobile.scss */
+  #content .page {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    min-height: 100%;
+    padding: 0 1rem 0 0.5rem;
+    box-sizing: border-box;
+  }
+  /* line 180, ../../scss/mobile.scss */
+  #content .page:before {
+    z-index: 9001;
+  }
+  /* line 181, ../../scss/mobile.scss */
+  #content .page:nth-child(3n+1) {
+    background: #f8f7e6;
+  }
+  /* line 182, ../../scss/mobile.scss */
+  #content .page:nth-child(3n+1):before {
+    background: rgba(248, 247, 230, 0.85);
+  }
+  /* line 184, ../../scss/mobile.scss */
+  #content .page:nth-child(3n+2) {
+    background: #60b99a;
+  }
+  /* line 185, ../../scss/mobile.scss */
+  #content .page:nth-child(3n+2):before {
+    background: rgba(96, 185, 154, 0.85);
+  }
+  /* line 187, ../../scss/mobile.scss */
+  #content .page:nth-child(3n+3) {
+    background: #f77825;
+  }
+  /* line 188, ../../scss/mobile.scss */
+  #content .page:nth-child(3n+3):before {
+    background: rgba(247, 120, 37, 0.85);
+  }
+  /* line 191, ../../scss/mobile.scss */
+  #content .page:before {
+    left: 0;
+    display: block;
+    content: " ";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  /* line 199, ../../scss/mobile.scss */
+  #content.open .page {
+    padding: 0;
+    margin-left: 0;
+  }
+  /* line 203, ../../scss/mobile.scss */
+  #content h1 {
+    display: inline-block;
+    background: #080808;
+    color: #fafafa;
+    text-shadow: 0 1px rgba(8, 8, 8, 0.6);
+    font-size: 1.5rem;
+    font-family: "Londrina Solid", "Droid Sans", sans-serif;
+    padding: 0.27em 0.5rem 0.27em 0.5rem;
+    margin: 0 0 1rem 0;
+    line-height: 1.44em;
+    box-shadow: 0 0.4rem 0 0 rgba(250, 250, 250, 0.67);
+  }
+  /* line 215, ../../scss/mobile.scss */
+  #content .block {
+    display: block;
+    font-size: 0.85rem;
+    margin: 0 0 0 1rem;
+  }
+  /* line 219, ../../scss/mobile.scss */
+  #content .block > p {
+    line-height: 1.5rem;
+    margin: 0 0 1rem 0;
+    padding: 0.25rem 0.5rem;
+    display: inline-block;
+    background: white;
+    box-shadow: 0 0.4rem 0 0 rgba(248, 247, 230, 0.67);
+  }
+  /* line 227, ../../scss/mobile.scss */
+  #content .block .threeBox {
+    position: relative;
+    display: block;
+    width: calc(100% - 2rem);
+    list-style: none;
+    padding: 0;
+  }
+  /* line 233, ../../scss/mobile.scss */
+  #content .block .threeBox .threeBoxItem {
+    flex: 1;
+    text-align: left;
+    box-sizing: border-box;
+    margin: 0.25rem 0;
+    padding: 0 0;
+    box-sizing: border-box;
+  }
+  /* line 240, ../../scss/mobile.scss */
+  #content .block .threeBox .threeBoxItem img {
+    width: 150px;
+  }
+  /* line 243, ../../scss/mobile.scss */
+  #content .block .threeBox .threeBoxItem p {
+    line-height: 1.5rem;
+    margin: 0.5rem 0;
+  }
+}
+@media (min-width: 768px) {
+  /* colors */
+  @import url("http://fonts.googleapis.com/css?family=Londrina+Solid");
+  /* line 3, ../../scss/_logo.scss */
+  .logo {
+    cursor: pointer;
+    position: relative;
+    background: #000;
+    display: inline-flex;
+    line-height: 1em;
+    font-weight: 400;
+    width: 2em;
+    height: 2em;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0.25em 0.125em;
+  }
+  /* line 17, ../../scss/_logo.scss */
+  .logo .row {
+    margin-top: -0.125em;
+    flex: 1;
+    display: flex;
+    width: 100%;
+    height: 1px;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    transform: scaleY(1.1);
+  }
+  /* line 30, ../../scss/_logo.scss */
+  .logo:hover .ltr.t {
+    color: #60b99a;
+  }
+  /* line 31, ../../scss/_logo.scss */
+  .logo:hover .ltr.a {
+    color: #60b99a;
+  }
+  /* line 32, ../../scss/_logo.scss */
+  .logo:hover .ltr.g {
+    color: #60b99a;
+  }
+  /* line 33, ../../scss/_logo.scss */
+  .logo:hover .ltr.d {
+    color: black;
+  }
+  /* line 34, ../../scss/_logo.scss */
+  .logo:hover .ltr.e {
+    color: #60b99a;
+  }
+  /* line 35, ../../scss/_logo.scss */
+  .logo:hover .ltr.s {
+    color: #60b99a;
+  }
+  /* line 38, ../../scss/_logo.scss */
+  .logo .ltr {
+    font-family: "Londrina Solid", "Droid Sans", sans-serif;
+    display: inline-block;
+    flex: 1;
+    color: #FFF;
+    box-sizing: border-box;
+  }
+  /* line 44, ../../scss/_logo.scss */
+  .logo .ltr.a {
+    margin-left: -0.125em;
+  }
+  /* line 47, ../../scss/_logo.scss */
+  .logo .ltr.g {
+    margin-top: -0.1em;
+    transform: scaleY(0.75);
+  }
+  /* line 51, ../../scss/_logo.scss */
+  .logo .ltr.d {
+    font-size: 0.85em;
+  }
+
+  @import url("http://fonts.googleapis.com/css?family=Londrina+Solid");
+  /* line 7, ../../scss/desktop.scss */
+  html, body {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Droid Sans", sans-serif;
+    font-size: 20px;
+    background: #f8f7e6;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  /* line 17, ../../scss/desktop.scss */
+  .logo {
+    position: fixed;
+    top: 0.8rem;
+    right: 0.8rem;
+    z-index: 1;
+    font-size: 3rem;
+  }
+
+  /* line 24, ../../scss/desktop.scss */
+  .navigation {
+    position: fixed;
+    display: block;
+    right: 0.8rem;
+    height: 8rem;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 9001;
+  }
+  /* line 33, ../../scss/desktop.scss */
+  .navigation .nav-item {
+    overflow: hidden;
+    width: 1rem;
+  }
+
+  /* line 38, ../../scss/desktop.scss */
+  #content {
+    display: block;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+  }
+
+  /* line 47, ../../scss/desktop.scss */
+  .page {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    min-height: 100%;
+  }
+  /* line 53, ../../scss/desktop.scss */
+  .page:nth-child(3n+1) {
+    background: #adab7c;
+  }
+  /* line 54, ../../scss/desktop.scss */
+  .page:nth-child(3n+2) {
+    background: #60b99a;
+  }
+  /* line 55, ../../scss/desktop.scss */
+  .page:nth-child(3n+3) {
+    background: #f77825;
+  }
+  /* line 56, ../../scss/desktop.scss */
+  .page h1 {
+    font-family: "Londrina Solid", "Droid Sans", sans-serif;
+    display: block;
+    margin: 0;
+    padding: 0.4em 0.5rem 0.4em 1rem;
+    color: #fafafa;
+    text-shadow: 0 1.5px 0 rgba(8, 8, 8, 0.5);
+    line-height: 1.25em;
+    font-size: 2rem;
+    font-weight: 500;
+    text-decoration: none;
+  }
+
+  /* line 69, ../../scss/desktop.scss */
+  .block {
+    display: block;
+    font-size: 1rem;
+    margin: 0 0 0 1rem;
+  }
+  /* line 73, ../../scss/desktop.scss */
+  .block > p, .block > div, .block > ul {
+    max-width: calc(100% - 12rem);
+    min-width: 26rem;
+    line-height: 1.612rem;
+    margin: 0 0 1rem 0;
+    padding: 0.612rem 1rem;
+    display: block;
+    background: white;
+    box-shadow: 0 0.4rem 0 0 rgba(248, 247, 230, 0.67);
+  }
+  /* line 83, ../../scss/desktop.scss */
+  .block .threeBox {
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: stretch;
+    list-style: none;
+    width: 100%;
+  }
+  /* line 91, ../../scss/desktop.scss */
+  .block .threeBox .threeBoxItem {
+    flex: 1;
+    min-width: calc(150px + 1.5rem);
+    text-align: center;
+    box-sizing: border-box;
+    margin: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
+    background: #adab7c;
+    box-shadow: inset 0 2px 4px 1px rgba(51, 50, 32, 0.2);
+  }
+  /* line 101, ../../scss/desktop.scss */
+  .block .threeBox .threeBoxItem img {
+    outline: 1px dashed rgba(255, 255, 255, 0.7);
+  }
+  /* line 104, ../../scss/desktop.scss */
+  .block .threeBox .threeBoxItem p {
+    color: #fafafa;
+    font-weight: bold;
+    margin: 0;
+  }
+}
