--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,24 +1,31 @@
+@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic");
+@font-face {
+  font-family: "Museo300Regular";
+  src: url("fonts/Museo300-Regular-webfont.eot");
+  src: url("fonts/Museo300-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/Museo300-Regular-webfont.woff") format("woff"), url("fonts/Museo300-Regular-webfont.ttf") format("truetype"), url("fonts/Museo300-Regular-webfont.svg#Museo300Regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* colors */
-@import url("http://fonts.googleapis.com/css?family=Londrina+Solid");
-/* line 3, ../../scss/_logo.scss */
+/* line 1, ../../scss/_logo.scss */
 .logo {
   cursor: pointer;
   position: relative;
   background: #000;
   display: inline-flex;
   line-height: 1em;
-  font-weight: 400;
+  font-weight: 700;
   width: 2em;
   height: 2em;
   flex-flow: column nowrap;
   justify-content: space-around;
   align-items: center;
   box-sizing: border-box;
-  padding: 0.25em 0.125em;
+  padding: 0.1em 0.1em;
 }
-/* line 17, ../../scss/_logo.scss */
+/* line 15, ../../scss/_logo.scss */
 .logo .row {
-  margin-top: -0.125em;
   flex: 1;
   display: flex;
   width: 100%;
@@ -28,71 +35,61 @@
   align-items: center;
   transform: scaleY(1.1);
 }
-/* line 30, ../../scss/_logo.scss */
+/* line 27, ../../scss/_logo.scss */
 .logo:hover .ltr.t {
   color: #60b99a;
 }
-/* line 31, ../../scss/_logo.scss */
+/* line 28, ../../scss/_logo.scss */
 .logo:hover .ltr.a {
   color: #60b99a;
 }
-/* line 32, ../../scss/_logo.scss */
+/* line 29, ../../scss/_logo.scss */
 .logo:hover .ltr.g {
   color: #60b99a;
 }
-/* line 33, ../../scss/_logo.scss */
+/* line 30, ../../scss/_logo.scss */
 .logo:hover .ltr.d {
   color: black;
 }
-/* line 34, ../../scss/_logo.scss */
+/* line 31, ../../scss/_logo.scss */
 .logo:hover .ltr.e {
   color: #60b99a;
 }
-/* line 35, ../../scss/_logo.scss */
+/* line 32, ../../scss/_logo.scss */
 .logo:hover .ltr.s {
   color: #60b99a;
 }
-/* line 38, ../../scss/_logo.scss */
+/* line 35, ../../scss/_logo.scss */
 .logo .ltr {
-  font-family: "Londrina Solid", "Droid Sans", sans-serif;
+  font-size: 0.612em;
+  font-family: "Museo300Regular", serif;
   display: inline-block;
-  flex: 1;
   color: #FFF;
   box-sizing: border-box;
-}
-/* line 44, ../../scss/_logo.scss */
-.logo .ltr.a {
-  margin-left: -0.125em;
-}
-/* line 47, ../../scss/_logo.scss */
-.logo .ltr.g {
-  margin-top: -0.1em;
-  transform: scaleY(0.75);
-}
-/* line 51, ../../scss/_logo.scss */
-.logo .ltr.d {
-  font-size: 0.85em;
+  margin-top: -0.06em;
+  padding-bottom: 0.06em;
+  text-transform: capitalize;
 }
 
-/* line 15, ../../scss/mobile.scss */
+/* line 14, ../../scss/mobile.scss */
 html, body {
   position: relative;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Droid Sans", sans-serif;
+  font-family: "Source Sans Pro", "Trebuchet MS", sans-serif;
   font-size: 16px;
   background: #f8f7e6;
 }
 
-/* line 23, ../../scss/mobile.scss */
+/* line 22, ../../scss/mobile.scss */
 body {
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
-/* line 27, ../../scss/mobile.scss */
+/* line 26, ../../scss/mobile.scss */
 .navigation {
   margin: 0;
   padding: 0;
@@ -106,7 +103,7 @@ body {
   background-color: #adab7c;
   z-index: 9001;
 }
-/* line 38, ../../scss/mobile.scss */
+/* line 37, ../../scss/mobile.scss */
 .navigation .logo {
   position: absolute;
   font-size: 1.5rem;
@@ -117,7 +114,7 @@ body {
   transition: all 0.15s ease-out;
   transform: translateX(0);
 }
-/* line 48, ../../scss/mobile.scss */
+/* line 47, ../../scss/mobile.scss */
 .navigation .menu {
   display: block;
   position: relative;
@@ -131,7 +128,7 @@ body {
   transition: all 0.15s ease-out;
   overflow: hidden;
 }
-/* line 62, ../../scss/mobile.scss */
+/* line 61, ../../scss/mobile.scss */
 .navigation .menu .nav-menu {
   cursor: pointer;
   position: relative;
@@ -148,11 +145,11 @@ body {
   transition: all $transTime ease-out;
   */
 }
-/* line 77, ../../scss/mobile.scss */
+/* line 76, ../../scss/mobile.scss */
 .navigation .menu .nav-menu:hover {
   background: #333220;
 }
-/* line 81, ../../scss/mobile.scss */
+/* line 80, ../../scss/mobile.scss */
 .navigation .menu .nav-item {
   cursor: pointer;
   display: block;
@@ -169,44 +166,44 @@ body {
   line-height: 2em;
   padding: 0 0.5rem 0 3rem;
 }
-/* line 96, ../../scss/mobile.scss */
+/* line 95, ../../scss/mobile.scss */
 .navigation .menu .nav-item:nth-child(3n+3) {
   border-right: 0.5rem solid #f8f7e6;
 }
-/* line 97, ../../scss/mobile.scss */
+/* line 96, ../../scss/mobile.scss */
 .navigation .menu .nav-item:nth-child(3n+4) {
   border-right: 0.5rem solid #60b99a;
 }
-/* line 98, ../../scss/mobile.scss */
+/* line 97, ../../scss/mobile.scss */
 .navigation .menu .nav-item:nth-child(3n+5) {
   border-right: 0.5rem solid #f77825;
 }
-/* line 99, ../../scss/mobile.scss */
+/* line 98, ../../scss/mobile.scss */
 .navigation .menu .nav-item a {
   display: block;
   text-decoration: none;
   color: #333220;
 }
-/* line 103, ../../scss/mobile.scss */
+/* line 102, ../../scss/mobile.scss */
 .navigation .menu .nav-item a:focus {
   outline: none;
 }
-/* line 107, ../../scss/mobile.scss */
+/* line 106, ../../scss/mobile.scss */
 .navigation .menu .nav-item:hover {
   background: rgba(51, 50, 32, 0.5);
 }
-/* line 109, ../../scss/mobile.scss */
+/* line 108, ../../scss/mobile.scss */
 .navigation .menu .nav-item:hover a {
   color: #fafafa;
 }
-/* line 115, ../../scss/mobile.scss */
+/* line 114, ../../scss/mobile.scss */
 .navigation.open {
   top: 0;
   left: 0;
   min-width: 15rem;
   max-width: 100%;
 }
-/* line 119, ../../scss/mobile.scss */
+/* line 118, ../../scss/mobile.scss */
 .navigation.open .logo {
   font-size: 4.20rem;
   width: 8rem;
@@ -214,33 +211,33 @@ body {
   transform: translateX(-50%);
   background: transparent;
 }
-/* line 125, ../../scss/mobile.scss */
+/* line 124, ../../scss/mobile.scss */
 .navigation.open .logo:hover {
   background: #fafafa;
 }
-/* line 127, ../../scss/mobile.scss */
+/* line 126, ../../scss/mobile.scss */
 .navigation.open .logo:hover .row .ltr {
   color: #080808 !important;
 }
-/* line 133, ../../scss/mobile.scss */
+/* line 132, ../../scss/mobile.scss */
 .navigation.open .menu .nav-item {
   margin-left: 0;
   padding-left: 1.5rem;
 }
-/* line 140, ../../scss/mobile.scss */
+/* line 139, ../../scss/mobile.scss */
 .navigation .nav-item.current:nth-child(3n+3) {
   background: #f8f7e6;
 }
-/* line 141, ../../scss/mobile.scss */
+/* line 140, ../../scss/mobile.scss */
 .navigation .nav-item.current:nth-child(3n+4) {
   background: #60b99a;
 }
-/* line 142, ../../scss/mobile.scss */
+/* line 141, ../../scss/mobile.scss */
 .navigation .nav-item.current:nth-child(3n+5) {
   background: #f77825;
 }
 
-/* line 145, ../../scss/mobile.scss */
+/* line 144, ../../scss/mobile.scss */
 h1, h2, h3, h4 {
   display: block;
   margin: 0;
@@ -250,7 +247,7 @@ h1, h2, h3, h4 {
   color: #080808;
 }
 
-/* line 153, ../../scss/mobile.scss */
+/* line 152, ../../scss/mobile.scss */
 #content {
   display: block;
   margin: 0;
@@ -264,16 +261,16 @@ h1, h2, h3, h4 {
   transition: left 0.15s ease-out;
   left: 15rem;
 }
-/* line 165, ../../scss/mobile.scss */
+/* line 164, ../../scss/mobile.scss */
 #content.open {
   width: calc(100% - 3rem);
   left: 3rem;
 }
-/* line 168, ../../scss/mobile.scss */
+/* line 167, ../../scss/mobile.scss */
 #content.open .page:before {
   display: none;
 }
-/* line 172, ../../scss/mobile.scss */
+/* line 171, ../../scss/mobile.scss */
 #content .page {
   display: block;
   overflow: hidden;
@@ -283,35 +280,35 @@ h1, h2, h3, h4 {
   padding: 0 1rem 0 0.5rem;
   box-sizing: border-box;
 }
-/* line 180, ../../scss/mobile.scss */
+/* line 179, ../../scss/mobile.scss */
 #content .page:before {
   z-index: 9001;
 }
-/* line 181, ../../scss/mobile.scss */
+/* line 180, ../../scss/mobile.scss */
 #content .page:nth-child(3n+1) {
   background: #f8f7e6;
 }
-/* line 182, ../../scss/mobile.scss */
+/* line 181, ../../scss/mobile.scss */
 #content .page:nth-child(3n+1):before {
   background: rgba(248, 247, 230, 0.85);
 }
-/* line 184, ../../scss/mobile.scss */
+/* line 183, ../../scss/mobile.scss */
 #content .page:nth-child(3n+2) {
   background: #60b99a;
 }
-/* line 185, ../../scss/mobile.scss */
+/* line 184, ../../scss/mobile.scss */
 #content .page:nth-child(3n+2):before {
   background: rgba(96, 185, 154, 0.85);
 }
-/* line 187, ../../scss/mobile.scss */
+/* line 186, ../../scss/mobile.scss */
 #content .page:nth-child(3n+3) {
   background: #f77825;
 }
-/* line 188, ../../scss/mobile.scss */
+/* line 187, ../../scss/mobile.scss */
 #content .page:nth-child(3n+3):before {
   background: rgba(247, 120, 37, 0.85);
 }
-/* line 191, ../../scss/mobile.scss */
+/* line 190, ../../scss/mobile.scss */
 #content .page:before {
   left: 0;
   display: block;
@@ -320,19 +317,20 @@ h1, h2, h3, h4 {
   width: 100%;
   height: 100%;
 }
-/* line 199, ../../scss/mobile.scss */
+/* line 198, ../../scss/mobile.scss */
 #content.open .page {
   padding: 0;
   margin-left: 0;
 }
-/* line 203, ../../scss/mobile.scss */
+/* line 202, ../../scss/mobile.scss */
 #content h1 {
   display: inline-block;
   background: #080808;
   color: #fafafa;
   text-shadow: 0 1px rgba(8, 8, 8, 0.6);
   font-size: 1.5rem;
-  font-family: "Londrina Solid", "Droid Sans", sans-serif;
+  font-family: "Museo300Regular", serif;
+  font-weight: 700;
   padding: 0.27em 0.5rem 0.27em 0.5rem;
   margin: 0 0 1rem 0;
   line-height: 1.44em;
