--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,4 +1,18 @@
-$font-family: "Droid Sans", sans-serif;
+@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic");
+
+@font-face {
+	font-family: "Museo300Regular";
+	src: url("fonts/Museo300-Regular-webfont.eot");
+	src: url("fonts/Museo300-Regular-webfont.eot?#iefix") format('embedded-opentype'),
+	     url("fonts/Museo300-Regular-webfont.woff") format('woff'),
+	     url("fonts/Museo300-Regular-webfont.ttf") format('truetype'),
+	     url("fonts/Museo300-Regular-webfont.svg#Museo300Regular") format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+$title-font-family: "Museo300Regular", serif;
+$title-font-weight: 700;
+$font-family: "Source Sans Pro", "Trebuchet MS", sans-serif;
 $transTime: 0.15s;
 /* colors */
 $c-fn-1: rgb(248, 247, 230);
